# spleety

./: Anchor.toml  CONTRIBUTING.md  README.md  package-lock.json  package.json
app/: next.config.ts  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/expenses/: page.tsx
app/app/pay/[id]/: page.tsx
app/components/: ExpenseSidebar.tsx  Toast.tsx  WalletProvider.tsx
app/lib/: anchor.ts  config.ts  spleety.json
programs/spleety/: Cargo.toml
programs/spleety/src/: lib.rs
tests/: spleety.ts
